<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131212"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#089806"
        android:onClick="startRecording"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_start"
        android:background="#bd5050"
        android:enabled="false"
        android:onClick="stopRecording"
        android:text="@string/stop_button" />

    <TextView
        android:id="@+id/label_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_start"
        android:layout_alignStart="@+id/button_start"
        android:layout_below="@+id/button_start"
        android:text="@string/label_latitude"
        android:textColor="#d6c2c2" />

    <TextView
        android:id="@+id/label_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_latitude"
        android:layout_alignStart="@+id/label_latitude"
        android:layout_below="@+id/label_latitude"
        android:text="@string/label_longitude"
        android:textColor="#d6c2c2" />

    <TextView
        android:id="@+id/value_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_latitude"
        android:layout_alignBottom="@+id/label_latitude"
        android:layout_alignLeft="@+id/value_longitude"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/value_longitude"
        android:text="@string/value_latitude_default"
        android:textColor="#d6c2c2" />

    <TextView
        android:id="@+id/value_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_longitude"
        android:layout_alignBottom="@+id/label_longitude"
        android:layout_alignLeft="@+id/value_altitude"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/value_altitude"
        android:text="@string/value_longitude_default"
        android:textColor="#d6c2c2" />

    <RadioButton
        android:id="@+id/indicator_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button_start"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:text="@string/label_gps" />

    <TextView
        android:id="@+id/label_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_longitude"
        android:layout_alignStart="@+id/label_longitude"
        android:layout_below="@+id/label_longitude"
        android:text="@string/label_altitude"
        android:textColor="#d6c2c2" />

    <TextView
        android:id="@+id/value_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_altitude"
        android:layout_alignBottom="@+id/label_altitude"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_age"
        android:text="@string/value_altitude_default"
        android:textColor="#d6c2c2" />

    <TextView
        android:id="@+id/label_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_altitude"
        android:layout_alignStart="@+id/label_altitude"
        android:layout_below="@+id/label_altitude"
        android:text="@string/label_age"
        android:textColor="#d6c2c2" />

    <TextView
        android:id="@+id/value_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_age"
        android:layout_alignBottom="@+id/label_age"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/label_age"
        android:layout_toRightOf="@+id/label_age"
        android:text="@string/value_age_default"
        android:textColor="#d6c2c2" />

    <Button
        android:id="@+id/track_category_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/track_category_2"
        android:layout_alignLeft="@+id/track_category_2"
        android:layout_alignStart="@+id/track_category_2"
        android:layout_marginBottom="3dp"
        android:background="#2e2e2e"
        android:onClick="trackCategory1"
        android:text="@string/track_category_1"
        android:textColor="#fbe1e1e1" />

    <Button
        android:id="@+id/track_category_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#7d7b73"
        android:onClick="trackCategory2"
        android:text="@string/track_category_2" />

    <Button
        android:id="@+id/track_category_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/track_category_4"
        android:layout_alignLeft="@+id/track_category_4"
        android:layout_alignStart="@+id/track_category_4"
        android:layout_marginBottom="3dp"
        android:background="#089806"
        android:onClick="trackCategory3"
        android:text="@string/track_category_3" />

    <Button
        android:id="@+id/track_category_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/track_category_5"
        android:layout_alignLeft="@+id/track_category_5"
        android:layout_alignStart="@+id/track_category_5"
        android:layout_marginBottom="3dp"
        android:background="#fbec8e"
        android:onClick="trackCategory4"
        android:text="@string/track_category_4" />

    <Button
        android:id="@+id/track_category_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#980606"
        android:onClick="trackCategory5"
        android:text="@string/track_category_5" />

    <TextView
        android:id="@+id/track_chosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/track_category_1"
        android:layout_alignStart="@+id/track_category_1"
        android:layout_alignTop="@+id/track_category_3"
        android:text="@string/track_chosen"
        android:textColor="#d6c2c2" />
</RelativeLayout>
